test-cases/final-dump/cond_expr_no_else_err1.exp
Error detected during type checking of module(s) cond_expr_no_else_err1
final-dump/cond_expr_no_else_err1.wybe:1:1: proc to_count has test determinism, but declared normal (total)
