test-cases/final-dump/cond_expr_no_else_err1.wybe
def to_count(i:int):count =
    (if {i>=0 :: i:!count})
